--- a/main.css
+++ b/main.css
@@ -5,7 +5,7 @@ h1 {
   text-align: center;
   padding-top: 20px; }
 
-section {
+#section {
   background-color: #cc66ff;
   color: #333333;
   width: 780px;
@@ -14,28 +14,6 @@ section {
   border-radius: 7px;
   position: relative;
   z-index: -2; }
-
-.thumb1 {
-  height: 120px;
-  width: 120px;
-  -webkit-border-radius: 10%;
-  -moz-border-radius: 10%;
-  -ms-border-radius: 10%;
-  border-radius: 10%;
-  background-color: #333333;
-  color: #e6f2ff;
-  margin: 0 85px -90px; }
-
-.thumb2 {
-  height: 100px;
-  width: 100px;
-  -webkit-border-radius: 50%;
-  -moz-border-radius: 50%;
-  -ms-border-radius: 50%;
-  border-radius: 50%;
-  background-color: #cc66ff;
-  color: #cc66ff;
-  margin: -50px 970px; }
 
 .btn-1 {
   padding: 15px 20px;
@@ -65,5 +43,27 @@ section {
     background-color: #9933ff; }
   .btn-2:hover {
     background-color: #4d0099; }
+
+.thumb1 {
+  height: 120px;
+  width: 120px;
+  -webkit-border-radius: 10%;
+  -moz-border-radius: 10%;
+  -ms-border-radius: 10%;
+  border-radius: 10%;
+  background-color: #333333;
+  color: #e6f2ff;
+  margin: 0 85px -90px; }
+
+.thumb2 {
+  height: 100px;
+  width: 100px;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  border-radius: 50%;
+  background-color: #cc66ff;
+  color: #cc66ff;
+  margin: -50px 970px; }
 
 /*# sourceMappingURL=main.css.map */
