Style main-content section and add variables.sass

--- a/SASS/base/_base.sass
+++ b/SASS/base/_base.sass
@@ -1,12 +1,7 @@
-//variables
-$brand-main:    #6600cc
-$brand-sub:     #cc66ff
-$brand-dark:    #333333
-$brand-light:   #e6f2ff
-    
 body 
-    background-color: $brand-light
+    margin: 0
+    padding: 0
 
 h1 
-    text-align: center
-    padding-top: 20px
+    color: $brand-light
+    font-family: $font-stack-serif
