--- a/CSS/main.css
+++ b/CSS/main.css
@@ -1,69 +1,25 @@
 body {
-  background-color: #e6f2ff; }
+  margin: 0;
+  padding: 0; }
 
 h1 {
+  color: #eeeeee;
+  font-family: Georgia, Times, serif; }
+
+#header {
   text-align: center;
-  padding-top: 20px; }
-
-#section {
-  background-color: #cc66ff;
-  color: #333333;
-  width: 780px;
-  margin: auto;
-  padding: 20px;
-  border-radius: 7px;
-  position: relative;
-  z-index: -2; }
-
-.btn-1 {
-  padding: 15px 20px;
-  border-radius: 7px;
-  background-color: #6600cc;
-  color: white;
-  border-width: 0;
-  border-style: none;
-  cursor: pointer;
   display: block;
-  margin: auto; }
-  .btn-1:hover {
-    background-color: #9933ff; }
+  width: 100%;
+  background-color: #008975; }
+  #header h1 {
+    margin: 0;
+    padding: 10px 0; }
 
-.btn-2 {
-  padding: 30px;
-  border-radius: 50%;
-  background-color: #333333;
-  color: white;
-  border-width: 0;
-  border-style: none;
-  cursor: pointer;
-  display: block;
-  margin: auto;
-  font-size: 2rem; }
-  .btn-2:hover {
-    background-color: #9933ff; }
-  .btn-2:hover {
-    background-color: #4d0099; }
-
-.thumb1 {
-  height: 120px;
-  width: 120px;
-  -webkit-border-radius: 10%;
-  -moz-border-radius: 10%;
-  -ms-border-radius: 10%;
-  border-radius: 10%;
-  background-color: #333333;
-  color: #e6f2ff;
-  margin: 0 85px -90px; }
-
-.thumb2 {
-  height: 100px;
-  width: 100px;
-  -webkit-border-radius: 50%;
-  -moz-border-radius: 50%;
-  -ms-border-radius: 50%;
-  border-radius: 50%;
-  background-color: #cc66ff;
-  color: #cc66ff;
-  margin: -50px 970px; }
+#main-content {
+  width: 100%;
+  padding: 20px 30px;
+  box-sizing: border-box;
+  display: inline-block;
+  background-color: #eeeeee; }
 
 /*# sourceMappingURL=main.css.map */
