--- a/CSS/main.css
+++ b/CSS/main.css
@@ -22,4 +22,38 @@ h1 {
   display: inline-block;
   background-color: #eeeeee; }
 
+#main-nav {
+  background-color: #00aa8d;
+  width: 100%;
+  display: block;
+  padding: 10px 0 40px; }
+  #main-nav ul {
+    margin: 0;
+    padding: 0;
+    list-style-type: none; }
+    #main-nav ul li {
+      float: left;
+      margin-left: 30px; }
+      #main-nav ul li a {
+        text-decoration: none;
+        font-size: 22px;
+        color: #eeeeee; }
+        #main-nav ul li a:hover {
+          color: red; }
+
+.pro-img {
+  -webkit-box-shadow: 0 0 15px #555;
+  -moz-box-shadow: 0 0 15px #555;
+  box-shadow: 0 0 15px #555;
+  border: 1px solid #00aa8d;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  border-radius: 10px;
+  background-color: #00aa8d;
+  width: 22%;
+  height: 120px;
+  display: inline-block;
+  float: left;
+  margin: 15px; }
+
 /*# sourceMappingURL=main.css.map */
