--- a/CSS/main.css
+++ b/CSS/main.css
@@ -56,4 +56,22 @@ h1 {
   float: left;
   margin: 15px; }
 
+.alert, .success, .warning, .oh-dang {
+  border: 1px solid #333333;
+  margin: 10px 0;
+  padding: 15px;
+  text-transform: uppercase;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  border-radius: 10px; }
+
+.success {
+  background: green; }
+
+.warning {
+  background: #fc3; }
+
+.oh-dang {
+  background: red; }
+
 /*# sourceMappingURL=main.css.map */
