--- a/SASS/main.sass
+++ b/SASS/main.sass
@@ -1,5 +1,6 @@
-@import "variables.sass"
-@import "mixins.sass"
+@import "variables"
+@import "mixins"
+@import "extends"
 @import "base/base-dir"
 @import "layouts/layouts-dir"
 @import "modules/modules-dir"
